tests/parser/tests/cases/should_fail/unclosed_char_literal/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:1
1 |   'a
  |   ^^^ here
  = note: Invalid character literal `a`, character literals may only contain one codepoint 
